Design Fully Implemented

--- a/index.html
+++ b/index.html
@@ -20,8 +20,55 @@
     />
 
     <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Frontend Mentor | Four card feature section</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Reliable, efficient delivery</h1>
+      <h2>Powered by Technology</h2>
+      <p class="header-desc">
+        Our Artificial Intelligence powered tools use millions of project data
+        points to ensure that your project is successful
+      </p>
+    </header>
+    <main>
+      <div class="card" data-item-type="cyan">
+        <h3 class="card-title">Supervisor</h3>
+        <p class="card-desc">
+          Monitors activity to identify project roadblocks
+        </p>
+        <img
+          src="images/icon-supervisor.svg"
+          alt="Icon of supervisor"
+          class="card-image"
+        />
+      </div>
+
+      <div class="card" data-item-type="red">
+        <h3 class="card-title">Team Builder</h3>
+        <p class="card-desc">
+          Scans out talent network to create the optimal team for your project
+        </p>
+        <img src="images/icon-team-builder.svg" alt="" class="card-image" />
+      </div>
+
+      <div class="card" data-item-type="orange">
+        <h3 class="card-title">Karma</h3>
+        <p class="card-desc">
+          Regularly evaluates our talent to ensure quality
+        </p>
+        <img src="images/icon-karma.svg" alt="" class="card-image" />
+      </div>
+
+      <div class="card" data-item-type="blue">
+        <h3 class="card-title">Calculator</h3>
+        <p class="card-desc">
+          Uses data from past projects to provide better delivery estimates
+        </p>
+        <img src="images/icon-calculator.svg" alt="" class="card-image" />
+      </div>
+    </main>
+  </body>
 </html>
